fix: aside mobilemenu z-index

--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -44,7 +44,7 @@
 .category .owl-prev,
 .category .owl-next {
 
-    top: 8px;
+    top: 5rem;
 
 
 }
