--- a/assets/css/latest_blog.css
+++ b/assets/css/latest_blog.css
@@ -33,6 +33,16 @@
     margin-top: 8px
 }
 
+.latest_blog .owl-prev,
+.latest_blog .owl-next {
+    border: 5px solid red;
+    /* position: absolute; */
+    top: -5rem;
+    z-index: 10;
+    background-color: red;
+
+}
+
 @media only screen and (maax-width: 768px) {
     .latest_blog .blog_carousel {
         width: 100vw !important;
